--- a/overview/overview.html
+++ b/overview/overview.html
@@ -145,10 +145,9 @@
                 <p class="card-description">MetLife Approved base image for Apache Httpd</p>
                 <button class="card-button">
                     Details
-                    <svg class="button-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                        stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
-                    </svg>
+                    <svg class="button-icon" xmlns="http://www.w3.org/2000/svg" width="8" height="9" viewBox="0 0 8 9" fill="none">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M2.21689 1.70056C2.41855 1.4989 2.7455 1.4989 2.94716 1.70056L5.52887 4.28227C5.73052 4.48392 5.73053 4.81085 5.5289 5.01251L2.94719 7.59462C2.74555 7.7963 2.41859 7.79632 2.21692 7.59468C2.01524 7.39303 2.01522 7.06608 2.21686 6.8644L4.43349 4.64743L2.21689 2.43083C2.01523 2.22918 2.01523 1.90222 2.21689 1.70056Z" fill="#007ABC"/>
+                      </svg>
                 </button>
                 <div class="card-footer"></div>
             </div>
@@ -178,10 +177,9 @@
                 <p class="card-description">MetLife Approved base image for Apache Httpd</p>
                 <button class="card-button">
                     Details
-                    <svg class="button-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                        stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
-                    </svg>
+                    <svg class="button-icon" xmlns="http://www.w3.org/2000/svg" width="8" height="9" viewBox="0 0 8 9" fill="none">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M2.21689 1.70056C2.41855 1.4989 2.7455 1.4989 2.94716 1.70056L5.52887 4.28227C5.73052 4.48392 5.73053 4.81085 5.5289 5.01251L2.94719 7.59462C2.74555 7.7963 2.41859 7.79632 2.21692 7.59468C2.01524 7.39303 2.01522 7.06608 2.21686 6.8644L4.43349 4.64743L2.21689 2.43083C2.01523 2.22918 2.01523 1.90222 2.21689 1.70056Z" fill="#007ABC"/>
+                      </svg>
                 </button>
                 <div class="card-footer"></div>
             </div>
