--- a/overview/overview.html
+++ b/overview/overview.html
@@ -26,6 +26,9 @@
     </div>
 
     <div class="container">
+        <div class="total-results">
+            Total Results: <span class="result-count">9</span>
+        </div>
         <div class="filters">
             <div class="filter-group">
                 <div class="select-wrapper">
