updated screen 2 and 3

--- a/overview/overview.html
+++ b/overview/overview.html
@@ -129,18 +129,26 @@
                 <p class="card-subtitle">14098 - MetLife Dev X</p>
                 <div class="card-info">
                     <span class="info-item">
-                        <svg class="info-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                            stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M3 7v10c0 1.104.896 2 2 2h14c1.104 0 2-.896 2-2V7c0-1.104-.896-2-2-2h-4.586a2 2 0 01-1.414-.586L9.586 2H5c-1.104 0-2 .896-2 2z" />
+                        <svg class="info-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                            viewBox="0 0 16 16" fill="none">
+                            <path
+                                d="M14.3334 7.33325V11.3333C14.3334 13.9999 13.6668 14.6666 11.0001 14.6666H4.33342C1.66676 14.6666 1.00009 13.9999 1.00009 11.3333V4.66659C1.00009 1.99992 1.66676 1.33325 4.33342 1.33325H5.33343C6.33343 1.33325 6.55342 1.62659 6.93342 2.13325L7.93342 3.46659C8.18676 3.79992 8.33343 3.99992 9.00009 3.99992H11.0001C13.6668 3.99992 14.3334 4.66659 14.3334 7.33325Z"
+                                stroke="#787486" stroke-miterlimit="10" />
+                            <path d="M5.33334 1.33325H11.3333C12.6667 1.33325 13.3333 1.99992 13.3333 3.33325V4.25325"
+                                stroke="#787486" stroke-miterlimit="10" stroke-linecap="round"
+                                stroke-linejoin="round" />
                         </svg>
                         <span>Base Image</span>
                     </span>
                     <span class="info-item">
-                        <svg class="info-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                            stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M3 7v10c0 1.104.896 2 2 2h14c1.104 0 2-.896 2-2V7c0-1.104-.896-2-2-2h-4.586a2 2 0 01-1.414-.586L9.586 2H5c-1.104 0-2 .896-2 2z" />
+                        <svg class="info-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                            viewBox="0 0 16 16" fill="none">
+                            <path
+                                d="M14.3334 7.33325V11.3333C14.3334 13.9999 13.6668 14.6666 11.0001 14.6666H4.33342C1.66676 14.6666 1.00009 13.9999 1.00009 11.3333V4.66659C1.00009 1.99992 1.66676 1.33325 4.33342 1.33325H5.33343C6.33343 1.33325 6.55342 1.62659 6.93342 2.13325L7.93342 3.46659C8.18676 3.79992 8.33343 3.99992 9.00009 3.99992H11.0001C13.6668 3.99992 14.3334 4.66659 14.3334 7.33325Z"
+                                stroke="#787486" stroke-miterlimit="10" />
+                            <path d="M5.33334 1.33325H11.3333C12.6667 1.33325 13.3333 1.99992 13.3333 3.33325V4.25325"
+                                stroke="#787486" stroke-miterlimit="10" stroke-linecap="round"
+                                stroke-linejoin="round" />
                         </svg>
                         <span>14098</span>
                     </span>
@@ -148,9 +156,12 @@
                 <p class="card-description">MetLife Approved base image for Apache Httpd</p>
                 <button class="card-button">
                     Details
-                    <svg class="button-icon" xmlns="http://www.w3.org/2000/svg" width="8" height="9" viewBox="0 0 8 9" fill="none">
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M2.21689 1.70056C2.41855 1.4989 2.7455 1.4989 2.94716 1.70056L5.52887 4.28227C5.73052 4.48392 5.73053 4.81085 5.5289 5.01251L2.94719 7.59462C2.74555 7.7963 2.41859 7.79632 2.21692 7.59468C2.01524 7.39303 2.01522 7.06608 2.21686 6.8644L4.43349 4.64743L2.21689 2.43083C2.01523 2.22918 2.01523 1.90222 2.21689 1.70056Z" fill="#007ABC"/>
-                      </svg>
+                    <svg class="button-icon" xmlns="http://www.w3.org/2000/svg" width="8" height="9" viewBox="0 0 8 9"
+                        fill="none">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M2.21689 1.70056C2.41855 1.4989 2.7455 1.4989 2.94716 1.70056L5.52887 4.28227C5.73052 4.48392 5.73053 4.81085 5.5289 5.01251L2.94719 7.59462C2.74555 7.7963 2.41859 7.79632 2.21692 7.59468C2.01524 7.39303 2.01522 7.06608 2.21686 6.8644L4.43349 4.64743L2.21689 2.43083C2.01523 2.22918 2.01523 1.90222 2.21689 1.70056Z"
+                            fill="#007ABC" />
+                    </svg>
                 </button>
                 <div class="card-footer"></div>
             </div>
@@ -161,18 +172,26 @@
                 <p class="card-subtitle">14098 - MetLife Dev X</p>
                 <div class="card-info">
                     <span class="info-item">
-                        <svg class="info-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                            stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M3 7v10c0 1.104.896 2 2 2h14c1.104 0 2-.896 2-2V7c0-1.104-.896-2-2-2h-4.586a2 2 0 01-1.414-.586L9.586 2H5c-1.104 0-2 .896-2 2z" />
+                        <svg class="info-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                            viewBox="0 0 16 16" fill="none">
+                            <path
+                                d="M14.3334 7.33325V11.3333C14.3334 13.9999 13.6668 14.6666 11.0001 14.6666H4.33342C1.66676 14.6666 1.00009 13.9999 1.00009 11.3333V4.66659C1.00009 1.99992 1.66676 1.33325 4.33342 1.33325H5.33343C6.33343 1.33325 6.55342 1.62659 6.93342 2.13325L7.93342 3.46659C8.18676 3.79992 8.33343 3.99992 9.00009 3.99992H11.0001C13.6668 3.99992 14.3334 4.66659 14.3334 7.33325Z"
+                                stroke="#787486" stroke-miterlimit="10" />
+                            <path d="M5.33334 1.33325H11.3333C12.6667 1.33325 13.3333 1.99992 13.3333 3.33325V4.25325"
+                                stroke="#787486" stroke-miterlimit="10" stroke-linecap="round"
+                                stroke-linejoin="round" />
                         </svg>
                         <span>Base Image</span>
                     </span>
                     <span class="info-item">
-                        <svg class="info-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                            stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M3 7v10c0 1.104.896 2 2 2h14c1.104 0 2-.896 2-2V7c0-1.104-.896-2-2-2h-4.586a2 2 0 01-1.414-.586L9.586 2H5c-1.104 0-2 .896-2 2z" />
+                        <svg class="info-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                            viewBox="0 0 16 16" fill="none">
+                            <path
+                                d="M14.3334 7.33325V11.3333C14.3334 13.9999 13.6668 14.6666 11.0001 14.6666H4.33342C1.66676 14.6666 1.00009 13.9999 1.00009 11.3333V4.66659C1.00009 1.99992 1.66676 1.33325 4.33342 1.33325H5.33343C6.33343 1.33325 6.55342 1.62659 6.93342 2.13325L7.93342 3.46659C8.18676 3.79992 8.33343 3.99992 9.00009 3.99992H11.0001C13.6668 3.99992 14.3334 4.66659 14.3334 7.33325Z"
+                                stroke="#787486" stroke-miterlimit="10" />
+                            <path d="M5.33334 1.33325H11.3333C12.6667 1.33325 13.3333 1.99992 13.3333 3.33325V4.25325"
+                                stroke="#787486" stroke-miterlimit="10" stroke-linecap="round"
+                                stroke-linejoin="round" />
                         </svg>
                         <span>14098</span>
                     </span>
@@ -180,13 +199,17 @@
                 <p class="card-description">MetLife Approved base image for Apache Httpd</p>
                 <button class="card-button">
                     Details
-                    <svg class="button-icon" xmlns="http://www.w3.org/2000/svg" width="8" height="9" viewBox="0 0 8 9" fill="none">
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M2.21689 1.70056C2.41855 1.4989 2.7455 1.4989 2.94716 1.70056L5.52887 4.28227C5.73052 4.48392 5.73053 4.81085 5.5289 5.01251L2.94719 7.59462C2.74555 7.7963 2.41859 7.79632 2.21692 7.59468C2.01524 7.39303 2.01522 7.06608 2.21686 6.8644L4.43349 4.64743L2.21689 2.43083C2.01523 2.22918 2.01523 1.90222 2.21689 1.70056Z" fill="#007ABC"/>
-                      </svg>
+                    <svg class="button-icon" xmlns="http://www.w3.org/2000/svg" width="8" height="9" viewBox="0 0 8 9"
+                        fill="none">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M2.21689 1.70056C2.41855 1.4989 2.7455 1.4989 2.94716 1.70056L5.52887 4.28227C5.73052 4.48392 5.73053 4.81085 5.5289 5.01251L2.94719 7.59462C2.74555 7.7963 2.41859 7.79632 2.21692 7.59468C2.01524 7.39303 2.01522 7.06608 2.21686 6.8644L4.43349 4.64743L2.21689 2.43083C2.01523 2.22918 2.01523 1.90222 2.21689 1.70056Z"
+                            fill="#007ABC" />
+                    </svg>
                 </button>
                 <div class="card-footer"></div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
